--- a/src/app/shared/components/author-bio/author.component.html
+++ b/src/app/shared/components/author-bio/author.component.html
@@ -1,9 +1,9 @@
 <div *ngIf="authorDetails" class="author-details d-flex">
   <div class="author-avi">
-<img [src]="getUrl(authorDetails.objectId)" alt="">
+    <img [src]="authorDetails.objectId?getUrl(authorDetails.objectId):'assets/images/no-avatar.png'" alt="">
   </div>
   <div class="author-bio">
-<h4>{{authorDetails.fullName}}</h4>
+    <h4>{{authorDetails.fullName}}</h4>
     <p>{{authorDetails.authorDetails}}</p>
   </div>
 </div>
